# SLSApp

./: .gitignore  README.md
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resources.qrc  STFileManager.cpp  STFileManager.h  STFileManager.ui  STFormEditor.cpp  STFormEditor.h  STFormEditor.ui  STGraphicContainer.cpp  STGraphicContainer.h  STGraphicContainer.ui  STNewProject.cpp  STNewProject.h  STNewProject.ui  STPreferences.cpp  STPreferences.h  STPreferences.ui  STSimulation.cpp  STSimulation.h  STSimulation.ui  STToolBox.cpp  STToolBox.h  STToolBox.ui  main.cpp
app/Lab/: LG2DWidget.cpp  LG2DWidget.h  LG2DWidget.ui  LG3DWidget.cpp  LG3DWidget.h  LG3DWidget.ui  LGDataModal.cpp  LGDataModal.h  LGDataModel.cpp  LGDataModel.h  LGStyleCollection.cpp  LGStyleCollection.h
app/Res/: method_of_mna.sls  node_method_of_analysis.sls
app/Sim/: SCConsole.cpp  SCConsole.h  SCHeader.h  SCMatrixResolve.cpp  SCMatrixResolve.h  SCNetlist.cpp  SCNetlist.h  SCSimulation.cpp  SCSimulation.h  SCSpice.cpp  SCSpice.h  SGCanvas.cpp  SGCanvas.h  SGCanvasNotification.cpp  SGCanvasNotification.h  SGCanvasNotification.ui  SGCanvasView.cpp  SGCanvasView.h  SGCanvasView.ui  SGEditorModal.cpp  SGEditorModal.h  SGEditorModal.ui  SGEditorModel.cpp  SGEditorModel.h  SGEditorModel.ui  SGFile.cpp  SGFile.h  SGHeaders.cpp  SGHeaders.h  SGModalBase.cpp  SGModalBase.h  SGModalGround.cpp  SGModalGround.h  SGModalLine.cpp  SGModalLine.h  SGModalRes.cpp  SGModalRes.h  SGModalSource.cpp  SGModalSource.h  SGModelBase.cpp  (+10 more)
